mothers of lu initial changes

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,8 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Grayscale - Start Bootstrap Theme
+        //title Grayscale - Start Bootstrap Theme
+        title Mothers of Lu
 
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
@@ -27,171 +28,104 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top
             .container.px-4.px-lg-5
-                a.navbar-brand(href='#page-top') Start Bootstrap
+                a.navbar-brand(href='#page-top') mothersoflu.com
                 button.navbar-toggler.navbar-toggler-right(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     | Menu
                     i.fas.fa-bars
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto
                         li.nav-item
-                            a.nav-link(href='#about') About
+                            a.nav-link(href='#history') History
                         li.nav-item
-                            a.nav-link(href='#projects') Projects
+                            a.nav-link(href='#pray') Pray
                         li.nav-item
-                            a.nav-link(href='#signup') Contact
+                            a.nav-link(href='#connect') Connect
 
         // Masthead
         header.masthead
             .container.px-4.px-lg-5.d-flex.h-100.align-items-center.justify-content-center
                 .d-flex.justify-content-center
                     .text-center
-                        h1.mx-auto.my-0.text-uppercase Grayscale
-                        h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
-                        a.btn.btn-primary(href='#about') Get Started
+                        //h1.mx-auto.my-0.text-uppercase Grayscale
+                        //h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
+                        //a.btn.btn-primary(href='#about') Get Started
+                        h1.mx-auto.my-0.text-uppercase Mothers of Lu
+                        h2.text-white-50.mx-auto.mt-2.mb-5 The deepest desire of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
+                        //a.btn.btn-primary(href='#about') Get Started
 
         // About
-        section#about.about-section.text-center
+        section#history.about-section.text-center(style='margin-bottom:0rem; padding-top: 2rem;')
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
-                        h2.text-white.mb-4 Built with Bootstrap 5
-                        p.text-white-50
-                            | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on 
-                            a(href='https://startbootstrap.com/theme/grayscale/') the preview page.
-                            | The theme is open source, and you can use it for any purpose, personal or commercial.
-                img.img-fluid(src='assets/img/ipad.png', alt='...')
+                        //h2.text-white.mb-4 Built with Bootstrap 5
+                        //p.text-white-50
+                        //    | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
+                        //    a(href='https://startbootstrap.com/theme/grayscale/') the preview page.
+                        //    | The theme is open source, and you can use it for any purpose, personal or commercial.
+                        h2.text-white.mb-4 The story of the mothers of Lu
+                        p.text-white-50(style='margin-bottom:1rem')
+                            | "The little village of Lu, northern Italy, with only a few thousand inhabitants, is in a rural area 90 kilometres east of Turin. It would still be unknown to this day if, in the year 1881, the family others of Lu had not made a decision that had “serious consequences”. The deepest desire of many of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
+                img.img-fluid(src='assets/img/Monstrance.jpeg', alt='...' style='height: 300px')
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-8
+                        p.text-white-50(style='margin-bottom:1rem')
+                            | <br /> Under the direction of their parish priest, Msgr. Alessandro Canora, they gathered every Tuesday for adoration of the Blessed Sacrament, asking the Lord for vocations. They received Holy Communion on the first Sunday of every month with the same intention. After Mass, all the mothers prayed a particular prayer together imploring for vocations to the priesthood. Through the trusting prayer of these mothers and the openness of the other parents, an atmosphere of deep joy and Christian piety developed in the families, making it much easier for the children to recognize their vocations."
+                            | <br /> <br />
+                            | Through the trusting prayer of these mothers and the openness of the other parents, an atmosphere of deep joy and Christian piety developed in the families, making it much easier for the children to recognize their vocations."
+                img.img-fluid(src='assets/img/lu-vocations.jpeg', alt='...' style='height: 300px')
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-8
+                        p.text-white-50(style='margin-bottom:1rem')
+                            | <br />This picture is indeed unique in the annals of the Catholic Church. From 1 to 4 September 1946, the majority of the 323 priests and religious met in their village of Lu for a reunion which attracted world-wide attention.
+                            | <br /> <br />
+                            | "Did the Lord not say, “Many are called, but few are chosen” (Mt 22:14)? In other words, many are called, but only a few respond to that call. No one expected that God would hear the prayers of these mothers in such an astounding way. From the tiny village of Lu came 323 vocations!: 152 priests (diocesan and religious), and 171 nuns belonging to 41 different congregations. As many as three or four vocations came from some of these families.
+                img.img-fluid(src='assets/img/rinaldi.png', alt='...')
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-8
+                        p.text-white-50(style='margin-bottom:1rem')
+                            | <br />Blessed Philip Rinaldi
+                            | <br /><br /> The most famous example is the Rinaldi family, from whom God called seven children. Two daughters became Salesian sisters, both of whom were sent to San Domingo as courageous, pioneer missionaries. Five sons became priests, all joining the Salesians. The most well-known of the Rinaldi brothers is Blessed Philip Rinaldi, who became the third successor of St. John Bosco as Superior General of the Salesians. Pope John Paul II beatified him on 29 April 1990. In fact, many of the vocations from this small town became Salesians.
+                img.img-fluid(src='assets/img/bosco.png', alt='...')
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-8
+                        p.text-white-50(style='margin-bottom:1rem')
+                            | <br />St. John Bosco
+                            | <br /><br /> It is certainly not a coincidence, since St. John Bosco visited Lu four times during his life. The saint attended the first Mass of his spiritual son, Fr. Philip Rinaldi in this village where he was born. Philip always fondly recalled the faith of the families of Lu:
+                            | <br /><br /> "A faith that made our fathers and mothers say, ‘The Lord gave us our children, and so if He calls them, we can’t say no.’"
+                            | <br /><br /> Fr. Luigi Borghina and Fr. Pietro Rota lived the spirituality of Don Bosco so faithfully that the former was called the “Brazilian Don Bosco” and the latter the “Don Bosco of Valtellina”. Pope John XXIII once said the following about another vocation from Lu, His Excellency, Evasion Colli, Archbishop of Parma: “He should have become pope, not me. He had everything it takes to become a great pope.”
+                            | <br /><br /> Every ten years, the priests and sisters born in Lu come together from all around the world. Fr. Mario Meda, the long-serving parish priest of Lu, explained that this reunion is a true celebration, a feast of thanksgiving to God who has done such great things for Lu."
+                            | <br /><br />
+                            | <br /><br />
 
         // Projects
-        section#projects.projects-section.bg-light
+        section#pray.projects-section.bg-light(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
             .container.px-4.px-lg-5
-                // Featured Project Row
-                .row.gx-0.mb-4.mb-lg-5.align-items-center
-                    .col-xl-8.col-lg-7
-                        img.img-fluid.mb-3.mb-lg-0(src='assets/img/bg-masthead.jpg', alt='...')
-                    .col-xl-4.col-lg-5
-                        .featured-text.text-center.text-lg-left
-                            h4 Shoreline
-                            p.text-black-50.mb-0
-                                | Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!
-                // Project One Row
-                .row.gx-0.mb-5.mb-lg-0.justify-content-center
-                    .col-lg-6
-                        img.img-fluid(src='assets/img/demo-image-01.jpg', alt='...')
-                    .col-lg-6
-                        .bg-black.text-center.h-100.project
-                            .d-flex.h-100
-                                .project-text.w-100.my-auto.text-center.text-lg-left
-                                    h4.text-white Misty
-                                    p.mb-0.text-white-50
-                                        | An example of where you can put an image of a project, or anything else, along with a description.
-                                    hr.d-none.d-lg-block.mb-0.ms-0
-                // Project Two Row
-                .row.gx-0.justify-content-center
-                    .col-lg-6
-                        img.img-fluid(src='assets/img/demo-image-02.jpg', alt='...')
-                    .col-lg-6.order-lg-first
-                        .bg-black.text-center.h-100.project
-                            .d-flex.h-100
-                                .project-text.w-100.my-auto.text-center.text-lg-right
-                                    h4.text-white Mountains
-                                    p.mb-0.text-white-50
-                                        | Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!
-                                    hr.d-none.d-lg-block.mb-0.me-0
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-8.justify-content-center
+                        h4 The prayer that the mothers of Lu prayed was short, simple, and deep:
+                        p.text-black-50.mb-0(style='font-size: 150%;')
+                            | <br /> “O God, grant that one of my sons may become a priest!
+                            | <br />I myself want to live as a good Christian
+                            | <br />and want to guide my children always to do what is right,
+                            | <br />so that I may receive the grace, O God, to be allowed to give you a holy priest! Amen.”
 
         // Signup
-        section#signup.signup-section
+        section#connect.signup-section
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5
                     .col-md-10.col-lg-8.mx-auto.text-center
-                        i.far.fa-paper-plane.fa-2x.mb-2.text-white
-                        h2.text-white.mb-5 Subscribe to receive updates!
+                        p.text-white-50.mb-0(style='font-size: 150%;')
+                            | <br />
+                            | <br />
+                            | Mothers of Lu of Rochester, NY meet for a Holy Hour
+                            | at Sacred Heart Cathedral in @7PM the first Tuesday
+                            | of the month.
 
-                        // * * * * * * * * * * * * * * *
-                        // * * SB Forms Contact Form * *
-                        // * * * * * * * * * * * * * * *
-
-                        // This form is pre-integrated with SB Forms.
-                        // To make this form functional, sign up at
-                        // https://startbootstrap.com/solution/contact-forms
-                        // to get an API token!
-                        
-                        form#contactForm.form-signup(data-sb-form-api-token='API_TOKEN')
-
-                            // Email address input
-
-                            .row.input-group-newsletter
-                                .col
-                                    input#emailAddress.form-control(
-                                        type='email',
-                                        placeholder='Enter email address...',
-                                        aria-label='Enter email address...',
-                                        data-sb-validations='required,email'
-                                    )
-                                .col-auto
-                                    button#submitButton.btn.btn-primary.disabled(type='submit') Notify Me!
-                            .invalid-feedback.mt-2(data-sb-feedback='emailAddress:required')
-                                | An email is required.
-                            .invalid-feedback.mt-2(data-sb-feedback='emailAddress:email')
-                                | Email is not valid.
-
-                            // Submit success message
-                            //
-                            // This is what your users will see when the form
-                            // has successfully submitted
-
-                            #submitSuccessMessage.d-none
-                                .text-center.mb-3.mt-2.text-white
-                                    .fw-bolder Form submission successful!
-                                    | To activate this form, sign up at
-                                    br
-                                    a(href='https://startbootstrap.com/solution/contact-forms') https://startbootstrap.com/solution/contact-forms
-
-                            // Submit error message
-                            //
-                            // This is what your users will see when there is
-                            // an error submitting the form
-
-                            #submitErrorMessage.d-none
-                                .text-center.text-danger.mb-3.mt-2 Error sending message!
-
-        // Contact
-        section.contact-section.bg-black
-            .container.px-4.px-lg-5
-                .row.gx-4.gx-lg-5
-                    .col-md-4.mb-3.mb-md-0
-                        .card.py-4.h-100
-                            .card-body.text-center
-                                i.fas.fa-map-marked-alt.text-primary.mb-2
-                                h4.text-uppercase.m-0 Address
-                                hr.my-4.mx-auto
-                                .small.text-black-50 4923 Market Street, Orlando FL
-                    .col-md-4.mb-3.mb-md-0
-                        .card.py-4.h-100
-                            .card-body.text-center
-                                i.fas.fa-envelope.text-primary.mb-2
-                                h4.text-uppercase.m-0 Email
-                                hr.my-4.mx-auto
-                                .small.text-black-50
-                                    a(href='#!') hello@yourdomain.com
-                    .col-md-4.mb-3.mb-md-0
-                        .card.py-4.h-100
-                            .card-body.text-center
-                                i.fas.fa-mobile-alt.text-primary.mb-2
-                                h4.text-uppercase.m-0 Phone
-                                hr.my-4.mx-auto
-                                .small.text-black-50 +1 (555) 902-8832
-                .social.d-flex.justify-content-center
-                    a.mx-2(href='#!')
-                        i.fab.fa-twitter
-                    a.mx-2(href='#!')
-                        i.fab.fa-facebook-f
-                    a.mx-2(href='#!')
-                        i.fab.fa-github
 
         // Footer
         footer.footer.bg-black.small.text-center.text-white-50
             .container.px-4.px-lg-5
-                | Copyright &copy; Your Website 2021
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js')
