--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -12,7 +12,10 @@
         #{fade-out($black, 0.7)} 0%,
         #{fade-out($black, 0.3)} 75%,
         $black 100%),
+    /*
     url("../assets/img/bg-masthead.jpg");
+    */
+    url("../assets/img/lu-mothers.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
