--- a/src/scss/sections/_signup.scss
+++ b/src/scss/sections/_signup.scss
@@ -5,10 +5,15 @@
 .signup-section {
     padding: 10rem 0;
     background: linear-gradient(to bottom,
+    /*
         #{fade-out($black, 0.9)} 0%,
         #{fade-out($black, 0.5)} 75%,
+     */
+        #{fade-out($black, 0.9)} 0%,
+        #{fade-out($black, 0.5)} 15%,
         $black 100%),
-    url("../assets/img/bg-signup.jpg");
+    /* url("../assets/img/bg-signup.jpg"); */
+    url("../assets/img/luscape.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
