--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -22,6 +22,7 @@ $base-letter-spacing: 0.0625em;
 // Custom font family for masthead H1
 
 $font-family-special: "Varela Round",
+//$font-family-special: "Verdana"
 -apple-system,
 BlinkMacSystemFont,
 "Segoe UI",
