--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -35,11 +35,11 @@ html(lang='en')
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto
                         li.nav-item
-                            a.nav-link(href='#history') History
+                            a.nav-link(href='#connect') Connect
                         li.nav-item
                             a.nav-link(href='#pray') Pray
                         li.nav-item
-                            a.nav-link(href='#connect') Connect
+                            a.nav-link(href='#history') History
 
         // Masthead
         header.masthead
@@ -49,12 +49,46 @@ html(lang='en')
                         //h1.mx-auto.my-0.text-uppercase Grayscale
                         //h2.text-white-50.mx-auto.mt-2.mb-5 A free, responsive, one page Bootstrap theme created by Start Bootstrap.
                         //a.btn.btn-primary(href='#about') Get Started
-                        h1.mx-auto.my-0.text-uppercase Mothers of Lu
+                        h1.mx-auto.my-0.text-uppercase(style="background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.5))") Mothers of Lu
+                        // h1(style="background-linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.5))").mx-auto.my-0.text-uppercase Mothers of Lu
                         h2.text-white-50.mx-auto.mt-2.mb-5 The deepest desire of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
                         //a.btn.btn-primary(href='#about') Get Started
 
+        // Signup
+        //section#connect.signup-section(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
+        section#connect.projects-section.bg-light(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
+            .container.px-4.px-lg-5
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-lg-8.justify-content-center
+                        h2 Connect
+
+                        p.text-black-50.mb-0(style='font-size: 150%;')
+                            | <br />
+                            | Join the "Mothers of Lu" of Rochester, NY, for a Holy Hour
+                            | at Sacred Heart Cathedral @7PM the first Tuesday
+                            | of the month.
+                            | <br />
+                            | <br />
+                            | Stay up to date with the latest news and info by going to
+                            | <a href="https://mothers-of-lu.mobilize.io">mothers-of-lu.mobilize.io</a>
+                            | <br />
+                            | <br />
+                            | Contact <a href="mailto:MothersofLu.Roc@gmail.com">MothersofLu.Roc@gmail.com</a>
+                            | for more info.
+
+        // Projects
+        section#pray.signup-section.bg-light(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
+            .container.px-4.px-lg-5
+                .row.gx-4.gx-lg-5
+                    .col-md-10.col-lg-8.mx-auto.text-center
+                        h2(style='color: white') Pray
+                        p.text-white-80.mb-0(style='font-size: 150%; color: white')
+                            | <br />
+                            | "O God, grant that at least one of our sons may become a priest or religious brother, and one of our daughters a religious sister.  We ourselves want to live as good Christians, and to guide our children always to do what is right, so that we may receive the grace, O God, to be allowed to give Thee a holy priest, brother, or sister! Amen."<br />
+                            | (Our Father, Hail Mary and Glory Be)
         // About
         section#history.about-section.text-center(style='margin-bottom:0rem; padding-top: 2rem;')
+            <hr style="height:3px;border-width:0;color: #e6e6e6;"/>
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
@@ -63,6 +97,8 @@ html(lang='en')
                         //    | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
                         //    a(href='https://startbootstrap.com/theme/grayscale/') the preview page.
                         //    | The theme is open source, and you can use it for any purpose, personal or commercial.
+                        <br />
+                        <br />
                         h2.text-white.mb-4 The story of the mothers of Lu
                         p.text-white-50(style='margin-bottom:1rem')
                             | "The little village of Lu, northern Italy, with only a few thousand inhabitants, is in a rural area 90 kilometres east of Turin. It would still be unknown to this day if, in the year 1881, the family others of Lu had not made a decision that had “serious consequences”. The deepest desire of many of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
@@ -87,6 +123,7 @@ html(lang='en')
                             | <br />Blessed Philip Rinaldi
                             | <br /><br /> The most famous example is the Rinaldi family, from whom God called seven children. Two daughters became Salesian sisters, both of whom were sent to San Domingo as courageous, pioneer missionaries. Five sons became priests, all joining the Salesians. The most well-known of the Rinaldi brothers is Blessed Philip Rinaldi, who became the third successor of St. John Bosco as Superior General of the Salesians. Pope John Paul II beatified him on 29 April 1990. In fact, many of the vocations from this small town became Salesians.
                 img.img-fluid(src='assets/img/bosco.png', alt='...')
+
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
                         p.text-white-50(style='margin-bottom:1rem')
@@ -96,36 +133,20 @@ html(lang='en')
                             | <br /><br /> Fr. Luigi Borghina and Fr. Pietro Rota lived the spirituality of Don Bosco so faithfully that the former was called the “Brazilian Don Bosco” and the latter the “Don Bosco of Valtellina”. Pope John XXIII once said the following about another vocation from Lu, His Excellency, Evasion Colli, Archbishop of Parma: “He should have become pope, not me. He had everything it takes to become a great pope.”
                             | <br /><br /> Every ten years, the priests and sisters born in Lu come together from all around the world. Fr. Mario Meda, the long-serving parish priest of Lu, explained that this reunion is a true celebration, a feast of thanksgiving to God who has done such great things for Lu."
                             | <br /><br />
-                            | <br /><br />
 
-        // Projects
-        section#pray.projects-section.bg-light(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
-            .container.px-4.px-lg-5
-                .row.gx-4.gx-lg-5.justify-content-center
-                    .col-lg-8.justify-content-center
-                        h4 The prayer that the mothers of Lu prayed was short, simple, and deep:
-                        p.text-black-50.mb-0(style='font-size: 150%;')
-                            | <br /> “O God, grant that one of my sons may become a priest!
-                            | <br />I myself want to live as a good Christian
-                            | <br />and want to guide my children always to do what is right,
-                            | <br />so that I may receive the grace, O God, to be allowed to give you a holy priest! Amen.”
-
-        // Signup
-        section#connect.signup-section
-            .container.px-4.px-lg-5
-                .row.gx-4.gx-lg-5
-                    .col-md-10.col-lg-8.mx-auto.text-center
-                        p.text-white-50.mb-0(style='font-size: 150%;')
-                            | <br />
-                            | <br />
-                            | Mothers of Lu of Rochester, NY meet for a Holy Hour
-                            | at Sacred Heart Cathedral in @7PM the first Tuesday
-                            | of the month.
-
-
-        // Footer
-        footer.footer.bg-black.small.text-center.text-white-50
-            .container.px-4.px-lg-5
+                            | <i>NOTE: The above section is an html copy of a pdf version redited
+                            | <a href="https://d2y1pz2y630308.cloudfront.net/1053/documents/The%20story%20of%20the%20mothers%20of%20Lu.pdf">here.</a></i>
+//-                         h4 The prayer that the mothers of Lu prayed was short, simple, and deep:
+//-                         p.text-black-50.mb-0(style='font-size: 150%;')
+//-                             | <br /> “O God, grant that one of my sons may become a priest!
+//-                             | <br />I myself want to live as a good Christian
+//-                             | <br />and want to guide my children always to do what is right,
+//-                             | <br />so that I may receive the grace, O God, to be allowed to give you a holy priest! Amen.”
+//-
+//-
+//-         // Footer
+//-         footer.footer.bg-black.small.text-center.text-white-50
+//-             .container.px-4.px-lg-5
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js')
