--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -51,15 +51,16 @@ html(lang='en')
                         //a.btn.btn-primary(href='#about') Get Started
                         h1.mx-auto.my-0.text-uppercase(style="background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.5))") Mothers of Lu
                         // h1(style="background-linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.5))").mx-auto.my-0.text-uppercase Mothers of Lu
-                        h2.text-white-50.mx-auto.mt-2.mb-5 The deepest desire of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
+                        h2.text-white-50.mx-auto.mt-2.mb-5 The deepest desire of these mothers is for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
                         //a.btn.btn-primary(href='#about') Get Started
 
         // Signup
         //section#connect.signup-section(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
-        section#connect.projects-section.bg-light(style='margin-bottom:0rem; padding: 2rem; text-align: center;')
+        section#connect.projects-section.bg-light(style='margin-bottom:0rem; padding: 2rem; text-align: center; padding-top: 40px; margin-top: -40px;')
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8.justify-content-center
+                        <br />
                         h2 Connect
 
                         p.text-black-50.mb-0(style='font-size: 150%;')
@@ -86,22 +87,18 @@ html(lang='en')
                             | <br />
                             | "O God, grant that at least one of our sons may become a priest or religious brother, and one of our daughters a religious sister.  We ourselves want to live as good Christians, and to guide our children always to do what is right, so that we may receive the grace, O God, to be allowed to give Thee a holy priest, brother, or sister! Amen."<br />
                             | (Our Father, Hail Mary and Glory Be)
-        // About
-        section#history.about-section.text-center(style='margin-bottom:0rem; padding-top: 2rem;')
+            <br />
+            <br />
             <hr style="height:3px;border-width:0;color: #e6e6e6;"/>
+
+        // About
+        section#history.about-section.text-center(style='margin-bottom:0rem; padding: 2rem;')
             .container.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
-                        //h2.text-white.mb-4 Built with Bootstrap 5
-                        //p.text-white-50
-                        //    | Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                        //    a(href='https://startbootstrap.com/theme/grayscale/') the preview page.
-                        //    | The theme is open source, and you can use it for any purpose, personal or commercial.
-                        <br />
-                        <br />
-                        h2.text-white.mb-4 The story of the mothers of Lu
+                        h2.text-white.mb-4 The Mothers of Lu Story
                         p.text-white-50(style='margin-bottom:1rem')
-                            | "The little village of Lu, northern Italy, with only a few thousand inhabitants, is in a rural area 90 kilometres east of Turin. It would still be unknown to this day if, in the year 1881, the family others of Lu had not made a decision that had “serious consequences”. The deepest desire of many of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
+                            | "The little village of Lu, northern Italy, with only a few thousand inhabitants, is in a rural area 90 kilometers east of Turin. It would still be unknown to this day if, in the year 1881, the family's mothers of Lu had not made a decision that had “serious consequences”. The deepest desire of many of these mothers was for one of their sons to become a priest or for a daughter to place her life completely in God’s service.
                 img.img-fluid(src='assets/img/Monstrance.jpeg', alt='...' style='height: 300px')
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
@@ -113,40 +110,29 @@ html(lang='en')
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
                         p.text-white-50(style='margin-bottom:1rem')
-                            | <br />This picture is indeed unique in the annals of the Catholic Church. From 1 to 4 September 1946, the majority of the 323 priests and religious met in their village of Lu for a reunion which attracted world-wide attention.
+                            | <i style="font-size: 80%;">This picture is indeed unique in the annals of the Catholic Church. From September 1st-4th 1946, the majority of the 323 priests and religious met in their village of Lu for a reunion which attracted world-wide attention.</i>
                             | <br /> <br />
-                            | "Did the Lord not say, “Many are called, but few are chosen” (Mt 22:14)? In other words, many are called, but only a few respond to that call. No one expected that God would hear the prayers of these mothers in such an astounding way. From the tiny village of Lu came 323 vocations!: 152 priests (diocesan and religious), and 171 nuns belonging to 41 different congregations. As many as three or four vocations came from some of these families.
+                            | "Did the Lord not say, “Many are called, but few are chosen” (Mt 22:14)? In other words, many are called, but only a few respond to that call. No one expected that God would hear the prayers of these mothers in such an astounding way. From the tiny village of Lu came 323 vocations: 152 priests (diocesan and religious), and 171 nuns belonging to 41 different congregations! As many as three or four vocations came from some of these families.
                 img.img-fluid(src='assets/img/rinaldi.png', alt='...')
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
                         p.text-white-50(style='margin-bottom:1rem')
-                            | <br />Blessed Philip Rinaldi
-                            | <br /><br /> The most famous example is the Rinaldi family, from whom God called seven children. Two daughters became Salesian sisters, both of whom were sent to San Domingo as courageous, pioneer missionaries. Five sons became priests, all joining the Salesians. The most well-known of the Rinaldi brothers is Blessed Philip Rinaldi, who became the third successor of St. John Bosco as Superior General of the Salesians. Pope John Paul II beatified him on 29 April 1990. In fact, many of the vocations from this small town became Salesians.
+                            | <i style="font-size: 80%;">Blessed Philip Rinaldi</i>
+                            | <br /><br /> The most famous example is the Rinaldi family, from whom God called seven children. Two daughters became Salesian sisters, both of whom were sent to San Domingo as courageous, pioneer missionaries. Five sons became priests, all joining the Salesians. The most well-known of the Rinaldi brothers is Blessed Philip Rinaldi, who became the third successor of St. John Bosco as Superior General of the Salesians. Pope John Paul II beatified him on April 29th, 1990. In fact, many of the vocations from this small town became Salesians.
                 img.img-fluid(src='assets/img/bosco.png', alt='...')
 
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-lg-8
                         p.text-white-50(style='margin-bottom:1rem')
-                            | <br />St. John Bosco
-                            | <br /><br /> It is certainly not a coincidence, since St. John Bosco visited Lu four times during his life. The saint attended the first Mass of his spiritual son, Fr. Philip Rinaldi in this village where he was born. Philip always fondly recalled the faith of the families of Lu:
+                            | <i style="font-size: 80%;">St. John Bosco</i>
+                            | <br /><br /> It is certainly not a coincidence, since St. John Bosco visited Lu four times during his life. The saint attended the first Mass of his spiritual son, Fr. Philip Rinaldi, in this village where he was born. Philip always fondly recalled the faith of the families of Lu:
                             | <br /><br /> "A faith that made our fathers and mothers say, ‘The Lord gave us our children, and so if He calls them, we can’t say no.’"
                             | <br /><br /> Fr. Luigi Borghina and Fr. Pietro Rota lived the spirituality of Don Bosco so faithfully that the former was called the “Brazilian Don Bosco” and the latter the “Don Bosco of Valtellina”. Pope John XXIII once said the following about another vocation from Lu, His Excellency, Evasion Colli, Archbishop of Parma: “He should have become pope, not me. He had everything it takes to become a great pope.”
                             | <br /><br /> Every ten years, the priests and sisters born in Lu come together from all around the world. Fr. Mario Meda, the long-serving parish priest of Lu, explained that this reunion is a true celebration, a feast of thanksgiving to God who has done such great things for Lu."
                             | <br /><br />
 
-                            | <i>NOTE: The above section is an html copy of a pdf version redited
+                            | <i>NOTE: The above section is an html copy of a pdf version credited
                             | <a href="https://d2y1pz2y630308.cloudfront.net/1053/documents/The%20story%20of%20the%20mothers%20of%20Lu.pdf">here.</a></i>
-//-                         h4 The prayer that the mothers of Lu prayed was short, simple, and deep:
-//-                         p.text-black-50.mb-0(style='font-size: 150%;')
-//-                             | <br /> “O God, grant that one of my sons may become a priest!
-//-                             | <br />I myself want to live as a good Christian
-//-                             | <br />and want to guide my children always to do what is right,
-//-                             | <br />so that I may receive the grace, O God, to be allowed to give you a holy priest! Amen.”
-//-
-//-
-//-         // Footer
-//-         footer.footer.bg-black.small.text-center.text-white-50
-//-             .container.px-4.px-lg-5
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js')
