--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -66,7 +66,7 @@ html(lang='en')
                         p.text-black-50.mb-0(style='font-size: 150%;')
                             | <br />
                             | Join the "Mothers of Lu" of Rochester, NY, for a Holy Hour
-                            | at Sacred Heart Cathedral @7PM the first Tuesday
+                            | at the Perpetual Adoration Chapel at St. James Church (123 Whittington Road, Irondequoit 14609) @7PM the first Tuesday
                             | of the month.
                             | <br />
                             | <br />
